<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="260dp"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    style="@style/Widget.MaterialComponents.CardView"
    android:elevation="8dp"
    android:id="@+id/j_a_common_market_view_card"
    app:menu="@menu/common_market_card_menu">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/Red">

    <ImageView
        android:id="@+id/j_a_common_market_view_profile_img"
        android:layout_height="100dp"
        android:layout_width="70dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/TextColor2">
    </ImageView>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/j_a_common_market_view_title_txt"
        android:layout_height="50dp"
        android:layout_width="100dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/j_a_common_market_view_profile_img"
        android:background="@color/TextColor2"
        android:text="First Name, Last Name"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/Red"
        android:textAlignment="center"
        android:gravity="center">
    </TextView>

        <TextView
            android:id="@+id/j_a_common_market_view_support_txt"
            android:layout_height="40dp"
            android:layout_width="100dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/j_a_common_market_view_title_txt"
            android:layout_toRightOf="@+id/j_a_common_market_view_profile_img"
            android:background="@color/TextColor2"
            android:text="@string/owners_current_rate"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textColor="@color/Red"
            android:textAlignment="center"
            android:gravity="center"
            >
        </TextView>

        <TextView
            android:id="@+id/j_a_common_market_view_location_txt1"
            android:layout_height="35dp"
            android:layout_width="70dp"
            android:layout_margin="4dp"
            android:text="@string/location_hint"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_below="@+id/j_a_common_market_view_profile_img"
            android:background="@color/Blue4"
            android:textAllCaps="false"
            android:textColor="@color/Red"
            >
        </TextView>

        <TextView
            android:id="@+id/j_a_common_market_view_location_txt2"
            android:layout_height="35dp"
            android:layout_width="250dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/j_a_common_market_view_profile_img"
            android:layout_toRightOf="@+id/j_a_common_market_view_location_txt1"
            android:background="@color/Blue4"
            android:text="@string/location_hint"
            android:textAllCaps="false"
            android:textSize="11sp"
            android:textColor="@color/Red"
            android:textAlignment="center"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/j_a_common_market_view_amount_txt1"
            android:layout_height="35dp"
            android:layout_width="70dp"
            android:layout_margin="4dp"
            android:text="@string/amount_hint"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_below="@+id/j_a_common_market_view_location_txt1"
            android:background="@color/Blue4">
        </TextView>

        <TextView
            android:id="@+id/j_a_common_market_view_amount_txt2"
            android:layout_height="35dp"
            android:layout_width="250dp"
            android:layout_margin="4dp"
            android:layout_toRightOf="@+id/j_a_common_market_view_amount_txt1"
            android:layout_below="@+id/j_a_common_market_view_location_txt1"
            android:background="@color/Blue4"
            android:text="@string/zero_amount"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/Red"
            android:textAlignment="center"
            android:gravity="center">
        </TextView>

        <Button
            android:id="@+id/j_a_common_market_view_full_view_btn"
            android:layout_height="30dp"
            android:layout_width="70dp"
            android:background="@color/Blue4"
            android:layout_below="@+id/j_a_common_market_view_amount_txt1"
            android:layout_margin="4dp"
            android:text="@string/view_details"
            android:textColor="@color/Red"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="11sp"/>


        <Button
            android:id="@+id/j_a_common_market_view_google_map_btn"
            android:layout_height="30dp"
            android:layout_width="70dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/j_a_common_market_view_amount_txt1"
            android:layout_toRightOf="@+id/j_a_common_market_view_full_view_btn"
            android:layout_marginTop="8dp"
            android:background="@color/Blue4"
            android:text="@string/go_to_google_map"
            android:textColor="@color/Red"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="11sp"/>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
